--- a/assets/main.scss
+++ b/assets/main.scss
@@ -45,7 +45,7 @@
   --color-black: #{#000000};
   --color-background-lightest: #{#ffffff};
   --color-background-light: #{#f1f4ff};
-  --color-background: #{#ededed};
+  --color-background: #{#eef1fb};
   --color-shadow-up: #{#ffffff};
   --color-shadow-down: #{#cdcfd9};
   --color-box-shadow: #{71, 71, 71};
@@ -146,20 +146,63 @@ body {
 
 .main-header {
   display: grid;
-  grid-template-rows: 3rem 8rem;
+  grid-template-rows: 3rem 2rem;
   grid-template-columns: 1fr;
   grid-template-areas: '';
 }
 
 .section-theme {
+  font-size: 12px;
+  height: 1.8rem;
   background-color: var(--color-background);
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center;
   align-items: center;
+
+  /* For color theme icons */
+  .feather {
+    cursor: pointer;
+    height: 18px;
+    width: 18px;
+    padding: 1px;
+    background-color: var(--color-background-lightest);
+    outline: 1px solid var(--color-background-light);
+    margin: 0;
+    border-radius: 5px;
+    transition: all 0.1s ease;
+  }
+  .feather:hover {
+    border-color: var(--color-text-nav);
+  }
+  .feather.preferred {
+    border-color: var(--color-text-nav);
+  }
+  .feather.selected {
+    color: var(--color-white);
+    border-color: var(--color-text-nav);
+    background-color: var(--color-primary);
+  }
+  ul {
+    list-style-type: none;
+    display: flex;
+  }
 }
 
 .nav-container {
+  display: flex;
+  width: 100%;
+  height: 2.5rem;
+  background-color: var(--color-background-lightest);
+  /* position: fixed; */
+  justify-content: space-between;
+  align-items: center;
+  top: 0;
+  left: 0;
+  padding: 0rem 5% 1rem 5%;
+  z-index: 1;
+}
+.nav-container-desktop {
   display: flex;
   width: 100%;
   height: 5rem;
@@ -169,7 +212,7 @@ body {
   align-items: center;
   top: 0;
   left: 0;
-  padding: 2rem 5% 2rem 5%;
+  padding: 4rem 2rem 2rem 2rem;
   z-index: 1;
 }
 .nav-dropshadow {
@@ -178,15 +221,15 @@ body {
 
 .logo {
   cursor: pointer;
-  font-size: 2.4rem;
+  font-size: 1.8rem;
   font-weight: 700;
   color: var(--color-text-nav);
   justify-content: flex-start;
 }
 
 .svg-menu {
-  height: 3.5rem;
-  width: 3.5rem;
+  height: 2.8rem;
+  width: 2.8rem;
   fill: var(--color-text-nav);
 }
 
@@ -240,7 +283,7 @@ body {
     text-decoration: none;
     cursor: pointer;
     padding: 1rem 2rem;
-    margin: 0 1.4rem;
+    margin: 0 1rem;
     font-family: 'Open sans', sans-serif;
     font-weight: 500;
     color: var(--color-text-nav);
@@ -280,16 +323,21 @@ body {
 
 .main-section-hero {
   display: grid;
-  grid-template-rows: 4fr 2fr;
-  grid-template-areas: 'left-section' 'right-section';
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas:
+    'one one'
+    'two two';
   height: 75vh;
   margin: 1rem;
 }
 
 .left-section-hero {
-  grid-area: right-section;
+  grid-area: two;
   width: 100%;
   margin: 1rem 0 1rem 0;
+  align-self: center;
+  justify-self: center;
   h1 {
     /* position: absolute;
     top: 50%;
@@ -297,23 +345,25 @@ body {
     transform: translate(-50%, -50%); */
     display: block;
     margin: 0 auto;
-    max-width: 35rem;
-    font-size: 2.5rem;
+    max-width: 25rem;
+    font-size: 1.8rem;
     font-weight: 700;
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
   }
 }
 
 .herobox-button {
+  z-index: 1;
   display: block;
   margin: 0 auto;
   outline: none;
   text-decoration: none;
   cursor: pointer;
-  padding: 1rem 7rem;
+  height: 3rem;
+  width: 25rem;
   font-family: 'Open sans', sans-serif;
-  font-size: 2rem;
+  font-size: 1.8rem;
   font-weight: 700;
   color: var(--color-white);
   border: none;
@@ -349,11 +399,14 @@ body {
 }
 
 .right-section-hero {
-  grid-area: left-section;
+  grid-area: one;
+  align-self: center;
+  justify-self: center;
   img {
     padding: 5px;
     max-height: 35rem;
-    width: 100vw;
+    min-width: 360px;
+    width: 100%;
     background-position: center;
     background-size: cover;
   }
@@ -362,7 +415,7 @@ body {
 /* Hero Section ends here */
 
 .below-header-svg {
-  margin-top: 5rem;
+  margin-top: 10rem;
   display: block;
   fill: var(--color-background);
 }
@@ -370,7 +423,7 @@ body {
 
 .feature-section {
   background-color: var(--color-background);
-  margin-top: 0;
+  margin-top: 0rem;
   margin-bottom: 2rem;
   display: grid;
   grid-template-columns: 1fr;
@@ -380,21 +433,21 @@ body {
 }
 .heading-feature-section {
   text-align: center;
-  font-size: 3.2rem;
-  letter-spacing: 1px;
-  margin: 0 2rem 6rem 2rem;
+  font-size: 3rem;
+  letter-spacing: 0.5px;
+  margin: 5rem 2rem 6rem 2rem;
 }
 
 .feature-grid {
   display: grid;
-  grid-template-rows: 2fr 1fr;
+  grid-template-rows: max-content 1fr;
   grid-template-areas: 'image' 'text';
 }
 .feature-image {
   grid-area: image;
   img {
     padding: 5px;
-    height: 30rem;
+    height: 25rem;
     width: 100%;
     background-position: center;
     background-size: cover;
@@ -402,10 +455,11 @@ body {
 }
 .feature-text {
   grid-area: text;
-  margin: 1rem 2rem 2rem 2rem;
-  text-align: center;
+  margin: 1rem 2rem 5rem 2rem;
+  text-align: left;
+
   h1 {
-    font-size: 2.4rem;
+    font-size: 2.2rem;
     margin-bottom: 1rem;
   }
 }
@@ -664,7 +718,7 @@ body {
   margin-bottom: 20px;
 
   h2 {
-    color: var(--color-white);
+    color: var(--color-text-nav);
     position: absolute;
     bottom: 5px;
     left: 20px;
@@ -756,8 +810,7 @@ body {
   grid-template-areas:
     'heading'
     'basic'
-    'expert'
-    'enterprise';
+    'expert';
 }
 
 .pricing-common {
@@ -885,7 +938,7 @@ body {
 /* Footer */
 
 .footer-section {
-  background-color: #0C1014;
+  background-color: #0c1014;
   font-size: 1.4rem;
   line-height: 2;
   padding: 4rem 2rem;
@@ -905,7 +958,7 @@ body {
     padding: 8px 10px 8px 0;
     text-transform: uppercase;
     font-size: 14px;
-   /*  margin-bottom: 20px;
+    /*  margin-bottom: 20px;
     margin-top: 10px; */
     display: block;
 
@@ -940,37 +993,126 @@ body {
   color: var(--color-text-grey);
 }
 
-/* 320px — 480px: Mobile devices */
+/* Mixins Start here */
 
-@media screen and (max-width: 900px) and (min-width: 600px) {
-
+@mixin mobilecommon {
+  .nav-container-desktop {
+    display: none;
+  }
 }
 
-/* 481px — 768px: iPads, Tablets */
+@mixin desktopcommon {
+  .nav-container {
+    display: none;
+  }
+}
+/* Mixins End here */
 
-@media screen and (max-width: 900px) and (min-width: 600px) {
-  
+/* MEDIA QUERIES TILL THE END */
+
+/* Mobile devices 320px*/
+
+@media screen and (max-width: 320px) {
+  @include mobilecommon;
+ 
+}
+
+/* Mobile devices 360px*/
+
+@media screen and (max-width: 360px) {
+  @include mobilecommon;
+}
+
+/* iPads, Tablets */
+
+@media screen and (max-width: 767px) and (min-width: 480px) {
+  @include mobilecommon;
 }
 
 /* 769px — 1024px: Small screens, laptops */
 
-@media screen and (max-width: 900px) and (min-width: 600px) {
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+  @include desktopcommon;
+  .btn-signup {
+    display: none;
+  }
   
 }
 
-/* 1025px — 1200px: Desktops, large screens */
+/* 1025px — 1280px: Desktops, large screens */
 
-@media screen and (max-width: 900px) and (min-width: 600px) {
-  
+@media screen and (max-width: 1280px) and (min-width: 1025px) {
+  @include desktopcommon;
+  .main-section-hero {
+    grid-template-areas:
+      'two one'
+      'two one';
+    height: 50vh;
+    margin: 5rem 1rem;
+  }
+  .left-section-hero {
+    align-self: center;
+    justify-self: center;
+    h1 {
+      font-size: 3.5rem;
+      font-weight: 900;
+      text-transform: uppercase;
+    }
+    button {
+      height: 6rem;
+      width: 35rem;
+      font-size: 3rem;
+    }
+  }
+  .right-section-hero {
+    grid-area: one;
+    align-self: center;
+    justify-self: center;
+    overflow: hidden;
+    img {
+      padding: 5px;
+      max-height: 55rem;
+      min-width: 55rem;
+      background-position: center;
+      background-size: cover;
+    }
+  }
+  .right-section-hero {
+    grid-area: one;
+    align-self: center;
+    justify-self: center;
+    overflow: hidden;
+    img {
+      padding: 5px;
+      max-height: 350rem;
+      min-width: 800px;
+      width: 460px;
+      height: 900px;
+      background-position: center;
+      background-size: cover;
+    }
+  }
 }
 
-/* 1201px and more —  Extra large screens, TV */
+/* 1281px and 1980px large screens upto FHD*/
 
-@media screen and (max-width: 900px) and (min-width: 600px) {
-  
+@media screen and (max-width: 1980px) and (min-width: 1281px) {
+  @include desktopcommon;
+}
+
+/* 1981px and 2880px 2k and WQHD screens */
+
+@media screen and (max-width: 2880px) and (min-width: 1981px) {
+}
+
+/* 2881px and 5120px QHD, UHD and 5k screens*/
+
+@media screen and (max-width: 5120px) and (min-width: 2881px) {
+}
+
+/* Screens bigger than 5k */
+
+@media screen and (min-width: 5121px) {
 }
 
 /* Footer ends */
-
-
-
