--- a/assets/main.scss
+++ b/assets/main.scss
@@ -231,6 +231,7 @@ body {
   height: 2.8rem;
   width: 2.8rem;
   fill: var(--color-text-nav);
+  cursor: pointer;
 }
 
 .nav-items {
@@ -364,7 +365,7 @@ body {
   width: 25rem;
   font-family: 'Open sans', sans-serif;
   font-size: 1.8rem;
-  font-weight: 700;  
+  font-weight: 700;
   text-transform: uppercase;
   color: var(--color-white);
   border: none;
@@ -428,16 +429,14 @@ body {
   margin-bottom: 2rem;
   display: grid;
   grid-template-columns: 1fr;
-  :nth-child(2n + 3) {
-    background-color: var(--color-background-lightest);
-  }
 }
 .heading-feature-section {
   text-align: center;
   font-size: 3rem;
   letter-spacing: 1px;
-  margin: 5rem 2rem 6rem 2rem;
+  padding: 5rem 2rem 6rem 2rem;
   text-transform: uppercase;
+  background-color: var(--color-background);
 }
 
 .feature-grid {
@@ -445,6 +444,13 @@ body {
   grid-template-rows: max-content 1fr;
   grid-template-areas: 'image' 'text';
 }
+.alt-color-1 {
+  background-color: var(--color-background-lightest);
+}
+.alt-color-2 {
+  background-color: var(--color-background-light);
+}
+
 .feature-image {
   grid-area: image;
   margin-top: 5rem;
@@ -480,7 +486,7 @@ body {
   text-align: center;
   font-size: 3.2rem;
   letter-spacing: 1px;
-  padding: 4rem 2rem 6rem 2rem;
+  padding: 4rem 2rem 5rem 2rem;
   text-transform: uppercase;
 }
 
@@ -635,8 +641,8 @@ body {
       padding: 40px 30px 10px 30px;
 
       .date {
-        right: 0;
         top: 0;
+        left: 0;
       }
 
       &::after {
@@ -648,7 +654,8 @@ body {
         top: 30px;
         left: -15px;
         border-width: 10px 15px 10px 0;
-        border-color: transparent #f5f5f5 transparent transparent;
+        border-color: transparent var(--color-background-lightest) transparent
+          transparent;
       }
     }
   }
@@ -680,7 +687,7 @@ body {
     top: 30px;
     right: -15px;
     border-width: 10px 0 10px 15px;
-    border-color: transparent transparent transparent #f5f5f5;
+    border-color: transparent transparent transparent #ffffff;
   }
 }
 
@@ -722,9 +729,8 @@ body {
 
 .timeline-img-header {
   width: auto;
-  height: 35rem;
+  height: 36rem;
   position: relative;
-  margin-bottom: 20px;
 
   h2 {
     color: var(--color-text-nav);
@@ -738,13 +744,13 @@ body {
   background: var(--color-secondary-dark);
   display: inline-block;
   color: var(--color-white);
-  padding: 5px 10px;
+  padding: 10px 20px;
   position: absolute;
-  right: 0;
   top: 0;
+  left: 0;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .container {
     padding-right: 5px;
     padding-left: 10px;
@@ -770,6 +776,11 @@ body {
       &:nth-child(even) {
         .timeline-content {
           float: none;
+          .date {
+            left: unset;
+            top: 0;
+            right: 0;
+          }
         }
       }
 
@@ -784,7 +795,7 @@ body {
             top: 30px;
             left: -15px;
             border-width: 10px 15px 10px 0;
-            border-color: transparent #f5f5f5 transparent transparent;
+            border-color: transparent #ffffff transparent transparent;
           }
         }
       }
@@ -803,6 +814,7 @@ body {
   justify-content: center;
   overflow: hidden;
   background-color: var(--color-background);
+  padding-bottom: 5rem;
 }
 
 .pricing-heading-main {
@@ -1010,11 +1022,164 @@ body {
   }
 }
 
+@mixin mobile360-767 {
+  .left-section-hero {
+    h1 {
+      margin-bottom: 2rem;
+    }
+  }
+  .herobox-button {
+    height: 5.2rem;
+    width: 32rem;
+    font-size: 2.4rem;
+  }
+  .heading-feature-section {
+    padding: 5rem 2rem 10rem 2rem;
+  }
+  .nav-container {
+    height: 3.5rem;
+    padding: 2.5rem 5% 1rem 5%;
+  }
+  .logo {
+    font-size: 2.6rem;
+  }
+  .main-section-hero {
+    height: 85vh;
+    margin: 2rem 1rem 1rem 1rem;
+  }
+
+  .below-header-svg {
+    margin-top: 5rem;
+  }
+  .heading-feature-section {
+    font-size: 4rem;
+  }
+
+  .heading-cards-section {
+    font-size: 4rem;
+  }
+  .card {
+    grid-template-columns: minmax(25rem, 38rem);
+    grid-template-rows: 28rem 25rem 8rem;
+  }
+
+  .card-image {
+    img {
+      max-height: 26rem;
+    }
+  }
+  .card-text {
+    padding: 0.1rem 3rem 3rem 2.5rem;
+    h2 {
+      font-size: 2.8rem;
+      margin-bottom: 0.5rem;
+    }
+    p {
+      font-size: 1.6rem;
+    }
+  }
+  .card-stats {
+    .type {
+      font-size: 1.3rem;
+    }
+    .value {
+      font-size: 2.4rem;
+      font-weight: 500;
+    }
+  }
+}
+
 @mixin desktopcommon {
   .nav-container {
     display: none;
   }
+
+  .timeline-container {
+    h1 {
+      font-size: 3.8rem;
+      margin: 0 auto;
+      max-width: 50rem;
+    }
+  }
+
+  .container {
+    margin-right: 2%;
+    margin-left: 2%;
+  }
+
+  .timeline-content {
+    width: 45%;
+  }
+
+  .timeline-img {
+    width: 30px;
+    height: 30px;
+    margin-top: 37px;
+  }
+
+  .timeline-content {
+    &::after {
+      top: 42px;
+    }
+  }
+
+  .timeline-item {
+    &:nth-child(even) {
+      .timeline-content {
+        .date {
+          right: auto;
+          left: 0;
+          border-top-left-radius: 5px;
+          border-top-right-radius: 0;
+        }
+        &::after {
+          top: 42px;
+        }
+      }
+    }
+  }
+  .date {
+    left: unset;
+    top: 0;
+    right: 0;
+    border-top-right-radius: 5px;
+  }
+
+  .pricing-grid {
+    grid-template-columns: 1fr 1.1fr;
+    grid-template-rows: max-content max-content;
+    grid-template-areas:
+      'heading heading'
+      'basic expert';
+  }
+
+  .pricing-basic {
+    margin-top: 6rem;
+    height: 69rem;
+  }
+  .pricing-expert {
+    height: 80rem;
+    .cross-icon {
+      margin-top: 0.88rem;
+    }
+  }
+
+  .footer-section {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr max-content;
+    padding: 4rem 2rem 4rem 5rem;
+    grid-template-areas:
+      'one two three four'
+      'one two three four'
+      'five five five five';
+  }
+  .footer-section-copyright {
+    margin-left: -3rem;
+    display: flex;
+    justify-content: center;
+  }
 }
+
 /* Mixins End here */
 
 /* MEDIA QUERIES STARTS HERE & GOES TILL THE END */
@@ -1023,20 +1188,19 @@ body {
 
 @media screen and (max-width: 320px) {
   @include mobilecommon;
- 
 }
 
 /* Mobile devices 360px to 400px*/
 
 @media screen and (max-width: 400px) and (min-width: 321px) {
   @include mobilecommon;
+  @include mobile360-767;
   .section-theme {
     font-size: 13px;
     height: 2.2rem;
     .feather {
       height: 22px;
       width: 22px;
-      padding: 1px;
     }
   }
 
@@ -1063,28 +1227,19 @@ body {
     h1 {
       max-width: 31rem;
       font-size: 2.4rem;
-      font-weight: 700;
-      margin-bottom: 2rem;
     }
   }
 
-  .herobox-button {
-    height: 5.2rem;
-    width: 32rem;
-    font-size: 2.4rem;
-  }
-    
   .below-header-svg {
     margin-top: 5rem;
   }
 
   .heading-feature-section {
     font-size: 3.6rem;
-    margin: 5rem 2rem 10rem 2rem;
   }
 
   .card {
-    grid-template-rows: 24rem max-content 8rem;
+    grid-template-rows: 24rem 25rem 8rem;
   }
   .card-text {
     padding: 2rem;
@@ -1112,6 +1267,8 @@ body {
 
 @media screen and (max-width: 767px) and (min-width: 401px) {
   @include mobilecommon;
+  @include mobile360-767;
+
   .section-theme {
     font-size: 14px;
     height: 2.6rem;
@@ -1121,95 +1278,23 @@ body {
     }
   }
 
-  .nav-container {
-    height: 3.5rem;
-    padding: 2.5rem 5% 1rem 5%;
-  }
-
-  .logo {
-    font-size: 2.6rem;
-  }
-
   .svg-menu {
     height: 3.8rem;
     width: 3.8rem;
-  }
-
-  .main-section-hero {
-    height: 85vh;
-    margin: 2rem 1rem 1rem 1rem;
   }
 
   .left-section-hero {
     h1 {
       max-width: 35rem;
       font-size: 2.6rem;
-      margin-bottom: 2rem;
     }
-  }
-
-  .herobox-button {
-    height: 5.2rem;
-    width: 32rem;
-    font-size: 2.4rem;
   }
 
   .right-section-hero {
-    grid-area: one;
     margin-top: 7rem;
-    align-self: center;
-    justify-self: center;
     img {
-      padding: 5px;
       max-height: 40rem;
       min-width: 400px;
-      width: 100%;
-      background-position: center;
-      background-size: cover;
-    }
-  }  
-    
-  .below-header-svg {
-    margin-top: 0;
-  }
-
-  .heading-feature-section {
-    font-size: 4rem;
-    margin: 5rem 2rem 10rem 2rem;
-  }
-  
-  .heading-cards-section {
-    font-size: 4rem;
-  }
-  
-  
-  
-  .card {
-    grid-template-columns: minmax(25rem, 38rem);
-    grid-template-rows: 28rem max-content 8rem;
-  }
-  
-  .card-image {
-    img {
-      max-height: 26rem;
-    }
-  }
-  .card-text {
-    padding: 0.1rem 3rem 3rem 2.5rem;
-    h2 {
-      font-size: 2.6rem;
-    }
-    p {
-      font-size: 1.5rem;
-    }
-  }
-  .card-stats {
-    .type {
-      font-size: 1.3rem;
-    }
-    .value {
-      font-size: 2.4rem;
-      font-weight: 500;
     }
   }
 }
@@ -1220,39 +1305,96 @@ body {
   }
 }
 
-
-/* 769px — 1024px: Small screens, laptops */
+/* 768px — 1024px: Small screens, laptops */
 
 @media screen and (max-width: 1024px) and (min-width: 768px) {
   @include desktopcommon;
   .btn-signup {
     display: none;
   }
-  
+  @include mobile360-767;
+
+  .section-theme {
+    font-size: 16px;
+    height: 3rem;
+    .feather {
+      height: 30px;
+      width: 30px;
+      padding: 3px;
+    }
+  }
+
+  .nav-item {
+    a {
+      font-size: 1.6rem;
+    }
+  }
+
+  .left-section-hero {
+    h1 {
+      max-width: 45rem;
+      font-size: 3.5rem;
+    }
+    button {
+      height: 6rem;
+      width: 45rem;
+      font-size: 3rem;
+    }
+  }
+
+  .right-section-hero {
+    margin-top: 5rem;
+    img {
+      max-height: 80rem;
+      min-width: 30rem;
+    }
+  }
+
+  .feature-image {
+    margin-top: 0;
+    img {
+      padding: 5rem;
+      height: 40rem;
+    }
+  }
+  .feature-text {
+    margin: 3rem 20% 5rem 15%;
+    font-size: 1.8rem;
+    line-height: 3.5rem;
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 1.5rem;
+    }
+  }
+
+  .cards-section {
+    grid-template-columns: minmax(25rem, 38rem) minmax(25rem, 38rem);
+    grid-gap: 1rem;
+  }
 }
 
 /* 1025px — 1280px: Desktops, large screens */
 
 @media screen and (max-width: 1280px) and (min-width: 1025px) {
   @include desktopcommon;
+
   .main-section-hero {
     grid-template-areas:
       'two one'
       'two one';
-    height: 50vh;
-    margin: 5rem 1rem;
+    height: 70vh;
+    margin: 10rem 1rem;
   }
   .left-section-hero {
     align-self: center;
     justify-self: center;
     h1 {
+      max-width: 45rem;
       font-size: 3.5rem;
-      font-weight: 900;
-      text-transform: uppercase;
     }
     button {
       height: 6rem;
-      width: 35rem;
+      width: 45rem;
       font-size: 3rem;
     }
   }
@@ -1260,26 +1402,11 @@ body {
     grid-area: one;
     align-self: center;
     justify-self: center;
-    overflow: hidden;
+    margin-left: -12rem;
     img {
       padding: 5px;
-      max-height: 55rem;
-      min-width: 55rem;
-      background-position: center;
-      background-size: cover;
-    }
-  }
-  .right-section-hero {
-    grid-area: one;
-    align-self: center;
-    justify-self: center;
-    overflow: hidden;
-    img {
-      padding: 5px;
-      max-height: 350rem;
-      min-width: 800px;
-      width: 460px;
-      height: 900px;
+      max-height: 80rem;
+      min-width: 30rem;
       background-position: center;
       background-size: cover;
     }
